# Ascender

./: .dockerignore  .editorconfig  .flake8  .gitignore  .stylelintrc.json  CITATION.cff  Dockerfile  LICENSE  Makefile  README  README.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: development.md
.github/workflows/: lint-and-test.yaml
ascender/: .flake8  .gitignore  Makefile
ascender/environments/: Dockerfile
data/: README.md
environments/: Dockerfile
environments/ci/: docker-compose.yaml
environments/cpu/: docker-compose.yaml
environments/development_cpu/: docker-compose.yaml
environments/development_gpu/: docker-compose.yaml
environments/gpu/: docker-compose.yaml
models/: README.md
notebooks/: README.md
outputs/: README.md
slidev/: package-lock.json  package.json  slides.md
src/sass/: main.scss
tests/src/: test_sample.py
